apps/proj4/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proj4-app
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "5000"
spec:
  selector:
    app: proj4-app
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
