apps/proj4/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proj4-app
spec:
  tls:
    - hosts:
        - proj4.local
      secretName: proj4-tls
  rules:
    - host: proj4.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proj4-app
                port:
                  number: 80
